# nonebot_plugin_mccheck

./: README.md  README_en.md  pyproject.toml
mc_check/: __init__.py  config.py  data_source.py
nonebot_plugin_mccheck/: __init__.py  config.py  configs.py  data_source.py  language.json  language.py  untils.py  utils.py
nonebot_plugin_mccheck/templates/: default.html
