[tool.poetry]
name = "nonebot-plugin-mccheck"
version = "0.1.8.2"
description = "Minecraft服务器状态查询，支持IPv6"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "molanp", email = "luotian233@foxmail.com" },
]
dependencies = [
    "pillow>=10.2.0",
    "nonebot2[fastapi]>=2.2.0",
    "nonebot-adapter-onebot>=2.4.1",
    "aiodns",
    "ujson"
]
license = { text = "GPL-3.0" }
homepage = "https://github.com/molanp/nonebot_plugin_mccheck"
repository = "https://github.com/molanp/nonebot_plugin_mccheck"
include = ["nonebot_plugin_mccheck/font/**/*"]
long_description = "Plugin for querying Minecraft servers for Nonebot"
long_description_content_type = "text/markdown"


[tool.poetry.optional-dependencies]
adapters = [
    "nonebot-adapter-onebot>=2.4.1",
]
